--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,8 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:supportsRtl,allowBackup,label">
 
+        <service android:name=".MyPushIntentService" />
+
         <!-- 相机适配 -->
         <!-- android:authorities="${applicationId}.provider" -->
         <provider
