--- a/app/build.gradle
+++ b/app/build.gradle
@@ -241,14 +241,13 @@ dependencies {
     implementation 'com.lzy.widget:imagepicker:0.6.1'
     //微信Android接入指南
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
-    /*implementation 'com.umeng.umsdk:common:1.5.4'//组件化基础库集成文档
+    implementation 'com.umeng.umsdk:common:2.1.0'//组件化基础库集成文档
     implementation 'com.umeng.umsdk:utdid:1.1.5.3'
     implementation 'com.umeng.umsdk:analytics:8.0.2'
-    implementation 'com.umeng.umsdk:push:6.0.1'*/
+    implementation 'com.umeng.umsdk:push:6.0.1'
     implementation project(':okgo')
     implementation project(':Transferee')
     implementation project(':FlycoRoundView_Lib')
-    implementation project(':push')
     implementation files('libs/tbs_sdk_thirdapp_v4.3.0.1020_43633_sharewithdownload_withoutGame_obfs_20190111_105200.jar')
     implementation(name: 'AlivcPlayer-3.4.9', ext: 'aar')
     implementation(name: 'AlivcReporter-1.2', ext: 'aar')
