--- a/app/build.gradle
+++ b/app/build.gradle
@@ -241,7 +241,7 @@ dependencies {
     implementation 'com.lzy.widget:imagepicker:0.6.1'
     //微信Android接入指南
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
-    implementation 'com.umeng.umsdk:common:2.1.0'//组件化基础库集成文档
+    implementation 'com.umeng.umsdk:common:2.1.0'
     implementation 'com.umeng.umsdk:utdid:1.1.5.3'
     implementation 'com.umeng.umsdk:analytics:8.0.2'
     implementation 'com.umeng.umsdk:push:6.0.1'
