--- a/app/build.gradle
+++ b/app/build.gradle
@@ -235,6 +235,7 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.1.0'
     implementation 'com.github.barteksc:android-pdf-viewer:3.1.0-beta.1'
     implementation 'com.aliyun.dpa:oss-android-sdk:+'
+    implementation 'com.alivc.conan:AlivcConan:0.9.5'
     implementation 'com.zhihu.android:matisse:0.5.2-beta4'
     implementation 'top.zibin:Luban:1.1.8'
     implementation 'org.litepal.android:java:3.0.0'
