修改Android 9无法接受消息BUG

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         android:allowBackup="false"
         android:icon="@mipmap/app_icon"
         android:label="@string/app_nameWX"
+        android:hardwareAccelerated="true"
         android:roundIcon="@mipmap/app_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
