--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
         }
         //TODO x5内核暂时不提供64位的so文件,在64位手机上需要让AP以32位模式运行
         ndk {
-            abiFilters "armeabi", "armeabi-v7a", "x86", "mips"// 保留这种架构的CPU armeabi-v7a
+            abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
         }
         sourceSets {
             main {
@@ -249,7 +249,7 @@ dependencies {
     implementation project(':okgo')
     implementation project(':Transferee')
     implementation project(':FlycoRoundView_Lib')
-    implementation files('libs/tbs_sdk_thirdapp_v4.3.0.1020_43633_sharewithdownload_withoutGame_obfs_20190111_105200.jar')
+    implementation files('libs/tbs_sdk_thirdapp_v4.3.0.1072_43646_sharewithdownloadwithfile_withoutGame_obfs_20190429_175122.jar')
     implementation(name: 'AlivcPlayer-3.4.9', ext: 'aar')
     implementation(name: 'AlivcReporter-1.2', ext: 'aar')
     implementation(name: 'AliyunVodPlayer-3.4.9', ext: 'aar')
