--- a/app/build.gradle
+++ b/app/build.gradle
@@ -223,6 +223,7 @@ dependencies {
     //okhttp以及socket
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation 'com.squareup.okhttp3:mockwebserver:3.12.0'
+    implementation 'com.qianwen:okhttp-utils:3.8.0'
     implementation 'com.google.zxing:core:3.3.3'
     implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.6'
     //recyclerview的默认加载布局
