--- a/app/build.gradle
+++ b/app/build.gradle
@@ -237,6 +237,7 @@ dependencies {
     implementation 'top.zibin:Luban:1.1.8'
     implementation 'org.litepal.android:java:3.0.0'
     implementation 'com.lzy.widget:imagepicker:0.6.1'
+    implementation 'com.github.huburt-Hu:NewbieGuide:v2.4.0'
     //微信Android接入指南
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
     implementation 'com.umeng.umsdk:common:2.1.0'
