--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-
+    apply from: "config.gradle"
     repositories {
         google()
         jcenter()
@@ -11,21 +10,15 @@ buildscript {
         maven { url "http://maven.aliyun.com/nexus/content/repositories/releases" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
-
+        classpath 'com.android.tools.build:gradle:3.1.0+'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
-        //butterknife插件
         classpath 'com.jakewharton:butterknife-gradle-plugin:9.0.0'
-        //kotlin插件
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.51"
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
-
 allprojects {
     repositories {
         google()
@@ -48,16 +41,13 @@ allprojects {
         }
     }
 }
-
 tasks.withType(JavaCompile) {
     options.incremental = true
 }
 
-
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-
 //root申明全局变量
 ext {
     compileSdkVersion = 27       //使用 Android 8.0版本的API 代号:Oreo(奥利奥)
