增加config文件,gradle插件升级,gradle文件升级为4.5

--- a/FlycoRoundView_Lib/build.gradle
+++ b/FlycoRoundView_Lib/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.library'
 
 version = "1.1.4"
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion rootProject.ext.android.compileSdkVersion
+    buildToolsVersion rootProject.ext.android.buildToolsVersion
 
     defaultConfig {
         minSdkVersion 8
-        targetSdkVersion 27
+        targetSdkVersion rootProject.ext.android.compileSdkVersion
         versionCode 114
         versionName version
     }
