--- a/Transferee/build.gradle
+++ b/Transferee/build.gradle
@@ -5,12 +5,12 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.hitomi'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 27
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0.0"
     }
@@ -53,8 +53,9 @@ artifacts {
 }
 
 dependencies {
-    implementation "com.android.support:appcompat-v7:25.3.1"
-    implementation 'com.android.support:recyclerview-v7:25.3.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.github.filippudak.progresspieview:library:1.0.4'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
