--- a/config.gradle
+++ b/config.gradle
@@ -1,10 +1,10 @@
 def versions = [:]
 versions.SdkVersion = 27
 versions.minSdkVersion = 16
-versions.buildToolsVersion = "27.1.1"
+versions.buildToolsVersion = "28.0.3"
 versions.support = "27.1.1"
 
-versions.constraint = "1.1.2"
+versions.constraint = "1.1.3"
 versions.butterknife = "8.8.1"
 versions.multidex = "1.0.2"
 versions.smartrefresh = "1.1.0-alpha-21"
@@ -72,6 +72,16 @@ ext {
             "wechat_opensdk"           : "com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+",
             "aliyun_oss"               : "com.aliyun.dpa:oss-android-sdk:+",
             "AlivcConan"               : "com.alivc.conan:AlivcConan:0.9.5"
+    ]
+
+    okGo = [
+            "libMinSdkVersion_okgo": 16,
+            "targetSdkVersion_okgo": 27,
+            "compileSdkVersion"    : 27,
+            "buildToolsVersion"    : "28.0.3",
+            "versionName_okgo"     : "3.0.4",
+            "versionCode_okgo"     : 29,
+            "okhttp3"           : "com.squareup.okhttp3:okhttp:3.10.0"
     ]
 
     google = [
