--- a/app/build.gradle
+++ b/app/build.gradle
@@ -165,13 +165,13 @@ android {
     applicationVariants.all { variant ->
         variant.outputs.all {
             if (variant.buildType.name == 'release') {
-                variant.mergedFlavor.versionCode = rootProject.ext.versionCode
-                variant.mergedFlavor.versionName = rootProject.ext.versionName
+                variant.mergedFlavor.versionCode = rootProject.ext.android.versionCode
+                variant.mergedFlavor.versionName = rootProject.ext.android.versionName
                 // release：输出文件名必须命名为 outputFileName
                 outputFileName = "com.ucfo.youcaiwx.${buildType.name}.${variant.versionName}.apk"
             } else {
-                variant.mergedFlavor.versionCode = rootProject.ext.versionCode
-                variant.mergedFlavor.versionName = rootProject.ext.versionName
+                variant.mergedFlavor.versionCode = rootProject.ext.android.versionCode
+                variant.mergedFlavor.versionName = rootProject.ext.android.versionName
                 // debug 输出文件名必须命名为 outputFileName
                 outputFileName = "${project.getName()}_${buildType.name}.apk"
                 outputFileName = "com.ucfo.youcaiwx.${buildType.name}.${variant.versionName}.apk"
