--- a/config.gradle
+++ b/config.gradle
@@ -56,7 +56,7 @@ ext {
             "support_constraint" : "com.android.support.constraint:constraint-layout:$versions.constraint"
     ]
     dependencies = [
-            "androidTestImplementation": "com.android.support.test.espresso:espresso-core:3.0.2",
+            "espresso": "com.android.support.test.espresso:espresso-core:3.0.2",
             "junit"                    : "junit:junit:4.12",
             "runner"                   : "com.android.support.test:runner:1.0.2",
 
