--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,17 @@ buildscript {
         jcenter()
         mavenCentral()
         maven { url "https://jitpack.io" }
-        maven { url 'https://dl.bintray.com/umsdk/release' }
+        maven { url "https://dl.bintray.com/umsdk/release" }
         maven { url "http://maven.aliyun.com/nexus/content/repositories/releases" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0+'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
-        classpath 'com.jakewharton:butterknife-gradle-plugin:9.0.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.51"
+        //noinspection GradleDynamicVersion,GradleDependency
+        classpath "com.android.tools.build:gradle:3.1.0+"
+        classpath "com.neenbedankt.gradle.plugins:android-apt:1.8"
+        //noinspection GradleDependency
+        classpath "com.github.dcendents:android-maven-gradle-plugin:1.4.1"
+        classpath "com.jakewharton:butterknife-gradle-plugin:9.0.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.10"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
