--- a/config.gradle
+++ b/config.gradle
@@ -23,10 +23,11 @@ versions.circleimageview = "3.0.0"
 versions.gson = "2.8.5"
 versions.qrcode = "1.3.6"
 versions.zxing = "3.3.3"
+versions.Luban = "1.1.8"
+versions.matisse = "0.5.2-beta4"
 
 versions.versionCode = 1
 versions.versionName = "1.0.0"
-
 ext {
     //==Android Third party,include Application Layer,SDK Layer==
     android = [
@@ -91,8 +92,8 @@ ext {
     ]
 
     picture = [
-            "matisse"    : "com.zhihu.android:matisse:0.5.2-beta4",
-            "Luban"      : "top.zibin:Luban:1.1.8",
+            "matisse"    : "com.zhihu.android:matisse:$versions.matisse",
+            "Luban"      : "top.zibin:Luban:$versions.Luban",
             "imagepicker": "com.lzy.widget:imagepicker:0.6.1"
     ]
 
