--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     }
     dependencies {
         //noinspection GradleDynamicVersion,GradleDependency
-        classpath "com.android.tools.build:gradle:3.1.0+"
+        classpath "com.android.tools.build:gradle:3.1.2"
         classpath "com.neenbedankt.gradle.plugins:android-apt:1.8"
         //noinspection GradleDependency
         classpath "com.github.dcendents:android-maven-gradle-plugin:1.4.1"
