--- a/config.gradle
+++ b/config.gradle
@@ -7,7 +7,8 @@ versions.support = "27.1.1"
 versions.constraint = "1.1.3"
 versions.butterknife = "8.8.1"
 versions.multidex = "1.0.2"
-versions.smartrefresh = "1.1.0-alpha-21"
+//versions.smartrefresh = "1.1.0-alpha-21"
+versions.smartrefresh = "1.1.0"
 versions.okhttp3 = "3.12.0"
 versions.okhttpUtils = "3.8.0"
 versions.glide = "3.7.0"
@@ -72,7 +73,8 @@ ext {
             "litepal"        : "org.litepal.android:java:$versions.litepal",
             "wechat_opensdk" : "com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+",
             "aliyun_oss"     : "com.aliyun.dpa:oss-android-sdk:+",
-            "AlivcConan"     : "com.alivc.conan:AlivcConan:0.9.5"
+            "AlivcConan"     : "com.alivc.conan:AlivcConan:0.9.5",
+            "bugly"          : "com.tencent.bugly:crashreport:latest.release"
     ]
 
     okGo = [
